<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:weakActivity="com.wootric.androidsdk.SurveyActivity"
    android:id="@+id/wootric_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/wootric_rl_survey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/wootric_white"
            android:padding="8dp"
            android:gravity="center">

            <RelativeLayout
                android:background="@null"
                android:id="@+id/wootric_rl_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/wootric_tv_survey_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/wootric_survey_question_text"
                    android:text="@string/wootric_default_survey_question_prefix"
                    android:layout_marginTop="@dimen/wootric_nps_question_margin"
                    android:layout_marginBottom="@dimen/wootric_nps_question_margin"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/wootric_tv_drag_to_change_score"
                    android:text="@string/wootric_drag_to_change_score"
                    android:gravity="center"
                    android:textColor="@color/wootric_dark_gray"
                    android:layout_marginTop="@dimen/wootric_survey_modal_button_margin"
                    android:textSize="@dimen/wootric_survey_labels_size"
                    android:layout_below="@+id/wootric_tv_survey_question"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.wootric.androidsdk.views.SurveyRatingBar_OLD
                    android:id="@+id/wootric_survey_rating_bar"
                    android:layout_below="@+id/wootric_tv_drag_to_change_score"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"/>

                <TextView
                    android:id="@+id/wootric_tv_not_at_all_likely"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="@dimen/wootric_labels_margin_horizontal"
                    android:layout_marginEnd="@dimen/wootric_labels_margin_horizontal"
                    android:layout_below="@id/wootric_survey_rating_bar"
                    android:layout_width="wrap_content"
                    android:textColor="@color/wootric_dark_gray"
                    android:textSize="@dimen/wootric_survey_labels_size"
                    android:text="@string/wootric_not_at_all_likely"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/wootric_tv_extremely_likely"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/wootric_labels_margin_horizontal"
                    android:layout_marginStart="@dimen/wootric_labels_margin_horizontal"
                    android:text="@string/wootric_extremely_likely"
                    android:textColor="@color/wootric_dark_gray"
                    android:textSize="@dimen/wootric_survey_labels_size"
                    android:layout_below="@id/wootric_survey_rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/wootric_btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/wootric_survey_rating_bar"
                    android:layout_marginTop="@dimen/wootric_survey_modal_button_margin"
                    android:layout_marginBottom="@dimen/wootric_survey_modal_button_margin"
                    android:background="@null"
                    android:text="@string/wootric_submit"
                    android:textSize="@dimen/wootric_survey_buttons"
                    android:enabled="false"
                    android:drawableLeft="@drawable/wootric_ic_submit_disabled"
                    android:textColor="@color/wootric_gray"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/wootric_rl_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/wootric_btn_back_to_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wootric_ic_arrow_back"
                    android:background="@null"
                    android:padding="4dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/wootric_tv_thank_you_score"
                    android:layout_alignParentTop="true"
                    android:text="@string/wootric_thank_you_score"
                    android:textSize="@dimen/wootric_survey_question_text"
                    android:layout_marginTop="@dimen/wootric_survey_modal_button_margin"
                    android:layout_width="match_parent"
                    android:textColor="@color/wootric_pink"
                    android:gravity="center"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/wootric_tv_thank_you"
                    android:text="@string/wootric_default_followup_question"
                    android:textSize="@dimen/wootric_survey_question_text"
                    android:layout_marginBottom="@dimen/wootric_nps_question_margin"
                    android:textColor="@color/wootric_submit"
                    android:layout_below="@id/wootric_tv_thank_you_score"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <EditText
                    android:id="@+id/wootric_et_feedback"
                    android:layout_below="@+id/wootric_tv_thank_you"
                    android:layout_margin="@dimen/wootric_tv_feedback_margins"
                    android:background="@drawable/wootric_survey_feedback"
                    android:hint="@string/wootric_default_placeholder"
                    android:textCursorDrawable="@drawable/wootric_feedback_cursor"
                    android:textSize="@dimen/wootric_survey_question_text"
                    android:gravity="top"
                    android:minLines="3"
                    android:textColorHint="@color/wootric_dark_gray"
                    android:padding="10dp"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/wootric_btn_send_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/wootric_et_feedback"
                    android:layout_marginTop="@dimen/wootric_survey_modal_button_margin"
                    android:layout_marginBottom="@dimen/wootric_survey_modal_button_margin"
                    android:background="@null"
                    android:text="@string/wootric_send_feedback"
                    android:textSize="@dimen/wootric_survey_buttons"
                    android:enabled="false"
                    android:drawableLeft="@drawable/wootric_ic_send_arrow_disabled"
                    android:textColor="@color/wootric_gray"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/wootric_tv_powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wootric_powered_by"
                android:layout_marginLeft="4dp"
                android:padding="4dp"
                android:background="@null"
                android:textSize="@dimen/wootric_survey_labels_size"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/wootric_btn_dismiss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/wootric_survey_labels_size"
                android:padding="4dp"
                android:drawableLeft="@drawable/wootric_ic_close"
                android:textColor="@color/wootric_dark_gray"
                android:background="@null"
                android:text="@string/wootric_dismiss"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/wootric_tv_powered_by"
                android:gravity="center" />

        </RelativeLayout>

        <TextView
            android:id="@+id/wootric_tv_final_thank_you"
            android:gravity="center"
            android:text="@string/wootric_final_thank_you"
            android:layout_width="match_parent"
            android:layout_height="@dimen/wootric_final_thank_you_height"
            android:background="@color/wootric_white"
            android:textColor="@color/wootric_pink"
            android:alpha="0"/>

    </RelativeLayout>

</ScrollView>