<resources>
    <string name="wootric_example_nps_question">How likely are you to recommend Wootric to a friend or coworker?</string>
    <string name="wootric_example_anchor_not_likely">Not at all likely</string>
    <string name="wootric_example_anchor_likely">Extremely likely</string>
    <string name="wootric_opt_out">"opt out"</string>
    <string name="wootric_powered_by">"powered by "</string>
    <string name="wootric">"InMoment"</string>
    <string name="wootric_disclaimer_text">"Learn how we handle your feedback here"</string>
    <string name="wootric_disclaimer_link_text">"here"</string>
    <string name="wootric_example_btn_dismiss">DISMISS</string>
    <string name="wootric_example_btn_submit">SUBMIT</string>
    <string name="wootric_example_followup_placeholder">Anything else we should know?</string>
    <string name="wootric_example_btn_edit_score">EDIT SCORE</string>
    <string name="wootric_thank_you">Thanks for your feedback!</string>
    <string name="wootric_feedback_question">Care to tell us why?</string>
    <string name="wootric_btn_thank_you_action">Get 20% off your next order</string>
    <string name="wootric_custom_thank_you">Custom thank you</string>
    <string name="tv_facebook_like">Like Us on Facebook</string>
    <string name="tv_facebook">Share on Facebook</string>
    <string name="tv_twitter">Share on Twitter</string>
    <string name="no_thanks">No thanks…</string>
    <string name="x">X</string>
</resources>
